--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ repositories {
 }
 
 dependencies {
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.0'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.0'
+    compile group: 'org.apache.httpcomponents', name: 'httpasyncclient', version: '4.1.2'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
