--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ apply plugin: 'java'
 
 sourceCompatibility = 1.6
 
+configurations { providedCompile }
+
 repositories {
     mavenCentral()
 }
@@ -14,5 +16,11 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.0'
     compile group: 'org.apache.httpcomponents', name: 'httpasyncclient', version: '4.1.2'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2'
+    providedCompile 'org.springframework:spring-core:4.3.1.RELEASE'
+    providedCompile 'org.springframework:spring-beans:4.3.1.RELEASE'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+
+sourceSets.main.compileClasspath += configurations.providedCompile
+sourceSets.test.compileClasspath += configurations.providedCompile
+sourceSets.test.runtimeClasspath += configurations.providedCompile
