--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: java
 sudo: true
 
 install:
-  - wget https://bintray.com/chrislusf/seaweedfs/download_file?file_path=go_0.70_amd64.deb
-  - sudo dpkg -i go_0.70_amd64.deb
+  - wget https://bintray.com/chrislusf/seaweedfs/download_file?file_path=go_0.70_amd64.deb -O weed.deb
+  - sudo dpkg -i weed.deb
   - weed version
 
 before_script:
