--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 
+targetCompatibility = 1.6
 sourceCompatibility = 1.6
 
 configurations { providedCompile }
@@ -14,7 +15,6 @@ repositories {
 dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.0'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.0'
-    compile group: 'org.apache.httpcomponents', name: 'httpasyncclient', version: '4.1.2'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2'
     providedCompile 'org.springframework:spring-core:4.3.1.RELEASE'
     providedCompile 'org.springframework:spring-beans:4.3.1.RELEASE'
