--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 
-targetCompatibility = 1.6
-sourceCompatibility = 1.6
+targetCompatibility = 1.7
+sourceCompatibility = 1.7
 
 configurations { providedCompile }
 
@@ -17,7 +17,8 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.0'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2'
     compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.2'
-    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.4.1'
+    compile group: 'org.ehcache', name: 'ehcache', version: '3.1.1'
+    compile group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.21'
     providedCompile 'org.springframework:spring-core:4.3.1.RELEASE'
     providedCompile 'org.springframework:spring-beans:4.3.1.RELEASE'
     testCompile group: 'junit', name: 'junit', version: '4.11'
