--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ install:
   - weed version
 
 before_script:
-  - rm -rf /tmp/weed/
-  - mkdir -p /tmp/weed/1 && mkdir -p /tmp/weed/2 && mkdir -p /tmp/weed/3
-  - nohup weed server -master.port=9333 -ip=0.0.0.0 -dir=/tmp/weed/1 -volume.port=8080 >/dev/null 2>&1 &
-  - nohup weed server -master.port=9334 -ip=0.0.0.0 -dir=/tmp/weed/2 -volume.port=8081 -master.peers=0.0.0.0:9333 >/dev/null 2>&1 &
-  - nohup weed server -master.port=9335 -ip=0.0.0.0 -dir=/tmp/weed/3 -volume.port=8082 -master.peers=0.0.0.0:9334 >/dev/null 2>&1 &
+  - rm -rf ./weed/
+  - mkdir -p ./weed/1 && mkdir -p ./weed/2 && mkdir -p ./weed/3
+  - nohup weed server -master.port=9333 -ip=0.0.0.0 -dir=./weed/1 -volume.port=8080 >/dev/null 2>&1 &
+  - nohup weed server -master.port=9334 -ip=0.0.0.0 -dir=./weed/2 -volume.port=8081 -master.peers=0.0.0.0:9333 >/dev/null 2>&1 &
+  - nohup weed server -master.port=9335 -ip=0.0.0.0 -dir=./weed/3 -volume.port=8082 -master.peers=0.0.0.0:9334 >/dev/null 2>&1 &
 
 script:
   - gradle test -i
