--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,13 @@
 language: java
-sudo: true
+sudo: required
 
-install:
-  - wget https://bintray.com/chrislusf/seaweedfs/download_file?file_path=go_0.70_amd64.deb -O weed.deb
-  - sudo dpkg -i weed.deb
-  - weed version
+services:
+  - docker
 
-before_script:
-  - rm -rf ./weed/
-  - mkdir -p ./weed/1 && mkdir -p ./weed/2 && mkdir -p ./weed/3
-  - nohup weed server -master.port=9333 -ip=0.0.0.0 -dir=./weed/1 -volume.port=8080 >/dev/null 2>&1 &
-  - nohup weed server -master.port=9334 -ip=0.0.0.0 -dir=./weed/2 -volume.port=8081 -master.peers=0.0.0.0:9333 >/dev/null 2>&1 &
-  - nohup weed server -master.port=9335 -ip=0.0.0.0 -dir=./weed/3 -volume.port=8082 -master.peers=0.0.0.0:9334 >/dev/null 2>&1 &
+before_install:
+  - docker build -t weed .
+  - docker run weed
+  - docker ps -a
 
 script:
   - gradle test -i
