--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
 
 before_install:
   - docker build -t weed .
-  - docker run -d -P --name weed weed
+  - docker run -d -P --name weed weed server -master.port=9333 -volume.port=8080 -dir="./data"
   - docker ps -a
 
 script:
