--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 language: java
-sudo: required
+sudo: true
 
-services:
-  - docker
+install:
+  - wget https://bintray.com/chrislusf/seaweedfs/download_file?file_path=go_0.70_amd64.deb -O weed.deb
+  - sudo dpkg -i weed.deb
+  - weed version
 
-before_install:
-  - docker build -t weed .
-  - docker run -d -p 127.0.0.1:8080:8080 -p 127.0.0.1:9333:9333 --name weed weed server -master.port=9333 -volume.port=8080 -dir="./data"
-  - docker ps -a
+before_script:
+  - mkdir -p /data/weed/1 && mkdir -p /data/weed/2 && mkdir -p /data/weed/3
+  - nohup weed server -master.port=9333 -ip=0.0.0.0 -dir=/data/weed/1 -volume.port=8080 >/dev/null 2>&1 &
+  - nohup weed server -master.port=9334 -ip=0.0.0.0 -dir=/data/weed/2 -volume.port=8081 -master.peers=0.0.0.0:9333 >/dev/null 2>&1 &
+  - nohup weed server -master.port=9335 -ip=0.0.0.0 -dir=/data/weed/3 -volume.port=8082 -master.peers=0.0.0.0:9334 >/dev/null 2>&1 &
 
 script:
   - gradle test -i
