--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ install:
   - weed version
 
 before_script:
-  - mkdir -p /data/weed/1 && mkdir -p /data/weed/2 && mkdir -p /data/weed/3
-  - nohup weed server -master.port=9333 -ip=0.0.0.0 -dir=/data/weed/1 -volume.port=8080 >/dev/null 2>&1 &
-  - nohup weed server -master.port=9334 -ip=0.0.0.0 -dir=/data/weed/2 -volume.port=8081 -master.peers=0.0.0.0:9333 >/dev/null 2>&1 &
-  - nohup weed server -master.port=9335 -ip=0.0.0.0 -dir=/data/weed/3 -volume.port=8082 -master.peers=0.0.0.0:9334 >/dev/null 2>&1 &
+  - mkdir -p ~/weed/volume/3 && mkdir -p ~/weed/volume/3 && mkdir -p ~/weed/volume/3
+  - nohup weed server -master.port=9333 -ip=0.0.0.0 -dir=~/weed/volume/1 -volume.port=8080 >/dev/null 2>&1 &
+  - nohup weed server -master.port=9334 -ip=0.0.0.0 -dir=~/weed/volume/2 -volume.port=8081 -master.peers=0.0.0.0:9333 >/dev/null 2>&1 &
+  - nohup weed server -master.port=9335 -ip=0.0.0.0 -dir=~/weed/volume/3 -volume.port=8082 -master.peers=0.0.0.0:9334 >/dev/null 2>&1 &
 
 script:
   - gradle test -i
