--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ install:
 
 before_script:
   - mkdir -p ~/weed/volume/3 && mkdir -p ~/weed/volume/3 && mkdir -p ~/weed/volume/3
-  - nohup weed server -master.port=9333 -ip=0.0.0.0 -dir=~/weed/volume/1 -volume.port=8080 >/dev/null 2>&1 &
-  - nohup weed server -master.port=9334 -ip=0.0.0.0 -dir=~/weed/volume/2 -volume.port=8081 -master.peers=0.0.0.0:9333 >/dev/null 2>&1 &
-  - nohup weed server -master.port=9335 -ip=0.0.0.0 -dir=~/weed/volume/3 -volume.port=8082 -master.peers=0.0.0.0:9334 >/dev/null 2>&1 &
+  - nohup weed server -master.port=9333 -ip=localhost -dir=~/weed/volume/1 -volume.port=8080 >/dev/null 2>&1 &
+  - nohup weed server -master.port=9334 -ip=localhost -dir=~/weed/volume/2 -volume.port=8081 -master.peers=0.0.0.0:9333 >/dev/null 2>&1 &
+  - nohup weed server -master.port=9335 -ip=localhost -dir=~/weed/volume/3 -volume.port=8082 -master.peers=0.0.0.0:9334 >/dev/null 2>&1 &
 
 script:
   - gradle test -i
