--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,12 @@
 language: java
 sudo: true
 
-install:
-  - wget https://bintray.com/chrislusf/seaweedfs/download_file?file_path=go_0.70_amd64.deb -O weed.deb
-  - sudo dpkg -i weed.deb
-  - weed version
+services:
+  - docker
 
-before_script:
-  - mkdir -p /home/travis/build/lokra-platform/seaweedfs-client/data/volume/1
-  - mkdir -p /home/travis/build/lokra-platform/seaweedfs-client/data/volume/2
-  - mkdir -p /home/travis/build/lokra-platform/seaweedfs-client/data/volume/3
-  - nohup weed server -master.port=9333 -ip=0.0.0.0 -dir=/home/travis/build/lokra-platform/seaweedfs-client/data/volume/1 -volume.port=8080 >/dev/null 2>&1 &
-  - nohup weed server -master.port=9334 -ip=0.0.0.0 -dir=/home/travis/build/lokra-platform/seaweedfs-client/data/volume/2 -volume.port=8081 -master.peers=0.0.0.0:9333 >/dev/null 2>&1 &
-  - nohup weed server -master.port=9335 -ip=0.0.0.0 -dir=/home/travis/build/lokra-platform/seaweedfs-client/data/volume/3 -volume.port=8082 -master.peers=0.0.0.0:9334 >/dev/null 2>&1 &
+install:
+  - docker build -t weed .
+  - docker run -d -p 0.0.0.0:8080:8080 -p 0.0.0.0:9333:9333 --name weed weed server -master.port=9333 -ip=0.0.0.0 -volume.port=8080
 
 script:
   - gradle build
