--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ install:
   - docker run -d -p 0.0.0.0:8080:8080 -p 0.0.0.0:9333:9333 --name weed weed server -master.port=9333 -ip=0.0.0.0 -volume.port=8080
 
 script:
-  - gradle build
+  - gradle test
