--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   - docker
 
 install:
-  - docker build -it weed .
+  - docker build -t weed .
   - docker run -d -p 0.0.0.0:8080:8080 -p 0.0.0.0:9333:9333 --name weed weed server -master.port=9333 -volume.port=8080
 
 script:
