Chore travis ci.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ before_script:
   - nohup sudo weed server -master.port=9335 -ip=0.0.0.0 -dir=/tmp/weed/3 -volume.port=8082 -master.peers=0.0.0.0:9334 >/dev/null 2>&1 &
 
 script:
-  - gradle test -i
+  - gradle init -i
