--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ install:
   - wget https://bintray.com/chrislusf/seaweedfs/download_file?file_path=go_0.70_amd64.deb -O weed.deb
   - sudo dpkg -i weed.deb
   - weed version
-  - weed server -volume.max=100 -master.volumeSizeLimitMB=30 &
+  - weed server -master.port=9333 -volume.port=9443 -volume.max=100 -master.volumeSizeLimitMB=30 &
+  - weed server -master.port=9334 -volume.port=9444 -volume.max=100 -master.volumeSizeLimitMB=30 -master.peers=0.0.0.0:9333 &
 
 script:
   - gradle test -i
