--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@
  * SOFTWARE.
  */
 
+
 group 'org.lokra.seaweedfs'
 version '1.0-SNAPSHOT'
 
@@ -35,16 +36,15 @@ repositories {
 }
 
 dependencies {
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.0'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.0'
-    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2'
-    compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.2'
-    compile group: 'org.apache.httpcomponents', name: 'httpclient-cache', version: '4.5.2'
-    compile group: 'org.ehcache', name: 'ehcache', version: '3.1.1'
-    compile group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.21'
-    providedCompile 'org.springframework:spring-core:4.3.1.RELEASE'
-    providedCompile 'org.springframework:spring-beans:4.3.1.RELEASE'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile('com.fasterxml.jackson.core:jackson-databind:2.8.0')
+    compile('com.fasterxml.jackson.core:jackson-core:2.8.0')
+    compile('org.apache.httpcomponents:httpclient:4.5.2')
+    compile('org.apache.httpcomponents:httpmime:4.5.2')
+    compile('org.apache.httpcomponents:httpclient-cache:4.5.2')
+    compile('org.ehcache:ehcache:3.1.1')
+    providedCompile('org.springframework:spring-core:4.3.1.RELEASE')
+    providedCompile('org.springframework:spring-beans:4.3.1.RELEASE')
+    testCompile('junit:junit:4.11')
 }
 
 sourceSets.main.compileClasspath += configurations.providedCompile
