Fixed gradle properties.

--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,8 @@ uploadArchives {
             beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
             repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: sonatypeUsername, password: sonatypePassword)
+                if (project.hasProperty('sonatypeUsername'))
+                    authentication(userName: sonatypeUsername, password: sonatypePassword)
             }
 
             pom.project {
