--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@
 
 
 group = 'org.lokra.seaweedfs'
-version = '0.7.1.RELEASE'
+version = '0.7.2.SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
@@ -70,9 +70,15 @@ uploadArchives {
     repositories {
         mavenDeployer {
 
+            def repositoryUrl
+            if (version.toString().split("\\.")[3] == "RELEASE")
+                repositoryUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
+            else
+                repositoryUrl = 'https://oss.sonatype.org/content/repositories/snapshots'
+
             beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
-            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+            repository(url: repositoryUrl) {
                 if (project.hasProperty('sonatypeUsername'))
                     authentication(userName: sonatypeUsername, password: sonatypePassword)
             }
