--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@
 
 
 group = 'org.lokra.seaweedfs'
-version = '0.7.3.SNAPSHOT'
+version = '0.7.3.RELEASE'
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
